<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="66dp"
        android:src="@drawable/splash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="33dp"
        android:layout_marginTop="33dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimary"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="33dp"
        android:layout_marginBottom="33dp"
        android:fontFamily="@font/semibold"
        android:paddingHorizontal="22dp"
        android:text="@string/account_title"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/phone_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/phone_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="33dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/medium"
        android:paddingHorizontal="22dp"
        android:text="@string/phone_title"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/phone" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="33dp"
        android:layout_marginBottom="11dp"
        android:background="@drawable/background_edit_text"
        android:drawableStart="@drawable/call"
        android:drawablePadding="7dp"
        android:drawableTint="?attr/colorPrimary"
        android:fontFamily="@font/medium"
        android:hint="@string/phone_number"
        android:paddingHorizontal="11dp"
        android:textColorHint="@color/gray_1"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/signIn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginHorizontal="33dp"
        android:layout_marginBottom="44dp"
        android:text="@string/sign_in"
        app:cornerRadius="33dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:strokeColor="@color/blue_700"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>