<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="33dp"
        android:fontFamily="@font/semibold"
        android:text="@string/enter_otp_code"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sentTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="33dp"
        android:layout_marginBottom="11dp"
        android:fontFamily="@font/regular"
        android:gravity="center"
        android:text="@string/code_sent_to"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/otp" />

    <in.aabhasjindal.otptextview.OtpTextView
        android:id="@+id/otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:textColorSecondary"
        app:bar_enabled="true"
        app:bar_height="2dp"
        app:height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:length="5"
        app:otp_text_size="24dp"
        app:width="40dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/invalid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:background="@drawable/background_error_code"
        android:drawableStart="@drawable/invalid"
        android:drawablePadding="7dp"
        android:fontFamily="@font/regular"
        android:paddingHorizontal="11dp"
        android:text="@string/invalid_code"
        android:textColor="@color/red"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/otp"
        app:layout_constraintStart_toStartOf="@id/otp"
        app:layout_constraintTop_toBottomOf="@id/otp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/verify"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginHorizontal="33dp"
        android:layout_marginBottom="44dp"
        android:text="@string/verify_code"
        app:cornerRadius="33dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:strokeColor="@color/blue_700"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>